package br.com.space.connect.domain.entities;

import br.com.space.connect.domain.valueobjects.Coordenada;
import br.com.space.connect.domain.valueobjects.NivelEnergia;
import br.com.space.connect.domain.interfaces.Recarregavel;
import br.com.space.connect.domain.valueobjects.Terreno;

public class SondaExploradora extends Sonda implements Recarregavel {
    private Double alcanceSensor;

    public SondaExploradora(String idSonda, NivelEnergia bateria, Coordenada posicaoAtual, Terreno terreno, Double alcanceSensor){
        super(idSonda, bateria, posicaoAtual, terreno);
        if(alcanceSensor <= 0){
            throw new IllegalArgumentException("Alcance do sensor deve ser maior que zero");
        }
        this.alcanceSensor = alcanceSensor;
    }

    public Double getAlcanceSensor() {
        return alcanceSensor;
    }

    @Override
    public void realizarAcaoLocal() {
        System.out.println("Sonda " + idSonda + " mapeando área na posição " +
                "(" + posicaoAtual.getEixoX() + ", " + posicaoAtual.getEixoY() +
                ") com alcance de " + alcanceSensor + " unidades.");
    }

    @Override
    public void conectarBase() {
        bateria = new NivelEnergia(bateria.getCapacidadeMaxima(), bateria.getCapacidadeMaxima());
    }

    @Override
    public String getStatus() {
        return super.getStatus() +
                " | Alcance do sensor: " + alcanceSensor;
    }
}
