package br.com.space.connect.domain.exception;

public class TerrenoInvalidoException extends RuntimeException {
    public TerrenoInvalidoException(String message) {
        super(message);
    }
}
