package br.com.space.connect.domain.interfaces;

public interface Recarregavel {
    public void conectarBase();
}
